--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@ body {
 }
 
 .adminPanel {
-    background-color: blue;
+    background-color:black;
+    padding: 10px;
+    color: white;
 }
 
 .inventory {
